--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -15,7 +15,7 @@
       <div class="">
         <button type="button" name="button" ng-if="userShow.profileIsCurrentUser">Edit</button>
         <button type="button" name="button" ng-click="userShow.follow({ id: userShow.user._id })" ng-if="!userShow.profileIsCurrentUser && !userShow.followingUser">Follow</button>
-        <button type="button" name="button" ng-click="userShow.follow( {id: userShow.user._id})" ng-if="!userShow.profileIsCurrentUser && userShow.followingUser">Following</button>
+        <button class="followingButton" type="button" name="button" ng-click="userShow.follow( {id: userShow.user._id})" ng-if="!userShow.profileIsCurrentUser && userShow.followingUser">Following</button>
       </div>
     </div>
     <div class="socialDetails">
