--- a/public/templates/card.html
+++ b/public/templates/card.html
@@ -1,6 +1,7 @@
 <div>
   <a ui-sref="show({ id: post._id })">
     <div class="card-block">
+
       <h4 class="card-title">{{ post.title }}</h4>
       <h6 class="card-subtitle">{{ post.user.firstName }}</h6>
     </div>
@@ -15,7 +16,7 @@
       {{ post.likes.length || 0 }}
     </div>
     <div>
-      {{ post.comments.length || 0 }} Comments
+      {{ post.createdAt | date:'fullDate' }}
     </div>
   </div>
 </div>
