--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -13,7 +13,9 @@
         </div>
       </div>
       <div class="">
-        <button type="button" name="button" ng-if="userShow.profileIsCurrentUser">Edit</button>
+
+        <!-- <button type="button" name="button" ng-if="userShow.profileIsCurrentUser" ng-click="main.editActive = !main.editActive"></button> -->
+
         <button type="button" name="button" ng-click="userShow.follow({ id: userShow.user._id })" ng-if="!userShow.profileIsCurrentUser && !userShow.followingUser">Follow</button>
         <button type="button" name="button" ng-click="userShow.follow( {id: userShow.user._id})" ng-if="!userShow.profileIsCurrentUser && userShow.followingUser">Following</button>
       </div>
