--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,7 +7,7 @@
 
   <div id="group2" class="parallax__group">
     <div class="parallax__layer parallax__layer--base">
-      <div class="title">NAME TBC combines a personal travel blog with the chance to connect with other travellers. Record your pictures and blog about your travels. Follow other travellers to get and share information. Connect and share via social media.</div>
+      <div class="title">Trail combines a personal travel blog with the chance to connect with other travellers. Record your pictures and blog about your travels. Follow other travellers to get and share information. Connect and share via social media.</div>
     </div>
     <div class="parallax__layer parallax__layer--back" style="background-image:url('../assets/images/mountain.jpg')">
       <div class="title"></div>
@@ -16,7 +16,7 @@
 
   <div id="group3" class="parallax__group">
     <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/trailer.jpg')">
-      <div class="title">Create your own profile to share your photos and stories. Follow other travellers and share your experiences on social media</div>
+      <div class="title">Create your own profile to share your photos and stories and track your travels around the globe.</div>
     </div>
     <div class="parallax__layer parallax__layer--back">
       <div class="title"></div>
@@ -25,7 +25,7 @@
 
   <div id="group4" class="parallax__group">
     <div class="parallax__layer parallax__layer--base">
-      <div class="title">Testamonial. Shout out to Kiwi for providing a cracking testamonial</div>
+      <div class="title">Testamonial. Shout out to Kiwi for providing a testamonial</div>
     </div>
     <div class="parallax__layer parallax__layer--back" style="background-image:url('../assets/images/lady.jpg')">
       <div class="title"></div>
@@ -38,4 +38,4 @@
       <div class="title">Goodbye....Thanks to our sponsors and put it in your back pocket.</div>
       </div>
     </div>
-  <footer>&copy; 2016. Website produced by OTN web development Ltd.</footer>
+  <footer>&copy; 2016. Website produced by OTN Web Development Ltd with (lots of) assistance from General Assembly London.</footer>
