--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -19,7 +19,7 @@
   <div id="group3" class="parallax__group">
     <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/trailer.jpg')">
 
-      <div class="title">Trail is your personal travel companion. Create your own profile and follow others to stay connected while on the go.</div>
+      <div class="title">trail is your personal travel companion. Create your own profile and follow others to stay connected while on the go.</div>
 
     </div>
     <div class="parallax__layer parallax__layer--back">
@@ -30,7 +30,7 @@
   <div id="group4" class="parallax__group">
     <div class="parallax__layer parallax__layer--base">
 
-      <div class="title">Create a profile and share your travel moments with others at the click of a button. It's as simple as that.</div>
+      <div class="title">create a profile and share your travel moments with others at the click of a button. It's as simple as that.</div>
 
     </div>
     <div class="parallax__layer parallax__layer--back" style="background-image:url('../assets/images/lady.jpg')">
@@ -41,7 +41,7 @@
 
   <div id="group5" class="parallax__group">
       <div class="parallax__layer parallax__layer--base" style="background-image:url('../assets/images/newtent.jpg')">
-      <div class="title">Welcome.</div>
+      <div class="title">welcome.</div>
       </div>
     </div>
-  <footer>&copy; 2016. Website produced by OTN Web Development Ltd with (lots of) assistance from General Assembly London.</footer>
+  <footer>&copy; 2016. Website produced by OTN Web Development Ltd with assistance from the General Assembly London WDI23 team.</footer>
